add spl token bankrun

--- a/capstone_project/one_cs/package.json
+++ b/capstone_project/one_cs/package.json
@@ -29,7 +29,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
-    "solana-bankrun": "^0.4.0"
+    "solana-bankrun": "0.4.0",
+    "spl-token-bankrun": "0.2.5"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.0",
