--- a/capstone_project/one_cs/anchor/Anchor.toml
+++ b/capstone_project/one_cs/anchor/Anchor.toml
@@ -5,14 +5,14 @@ anchor_version = "0.30.1"
 resolution = true
 skip-lint = false
 
-[programs.localnet]
-one_cs = "coUnmi3oBUtwtd9fjeAvSsJssXh5A5xyPbhpewyzRVF"
+[programs.devnet]
+one_cs = "4LN76xfUPPhhuGgtDrN3nk6pwY37AQ5nhyuTegZoxM4N"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "Localnet"
+cluster = "devnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
